add elixir disable idiomatic_version_file_enable_tools

--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -1,4 +1,5 @@
 [tools]
+elixir = "latest"
 erlang = "latest"
 go = "latest"
 java = ["11","17","21"]
@@ -8,3 +9,6 @@ ruby = ["latest","2"]
 rust = "latest"
 zig = "latest"
 zls = "latest"
+
+[settings]
+idiomatic_version_file_enable_tools = []
