--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -6,8 +6,8 @@ erlang = "latest"
 go = "latest"
 java = ["11","17","21"]
 node = ["latest"]
-python = ["latest","2"]
-ruby = ["latest","2"]
+python = ["3"]
+ruby = ["3"]
 rust = "latest"
 zig = "latest"
 zls = "latest"
