--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -7,7 +7,7 @@ go = ["latest"]
 java = ["17","21","11"]
 node = ["latest"]
 python = ["3"]
-ruby = ["3"]
+ruby = ["3.3.5","3.4"]
 rust = ["latest"]
 zig = ["latest"]
 zls = ["latest"]
