--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -4,10 +4,10 @@ deno = ["latest"]
 elixir = ["latest"]
 erlang = ["latest"]
 go = ["latest"]
-java = ["17","21","11"]
-node = ["latest"]
+java = ["17","21","11","liberica-8u472+11"]
+node = ["latest","24","22","18"]
 python = ["3"]
-ruby = ["3.3.5","3.4"]
+ruby = ["latest","3.3.5","3.4"]
 rust = ["latest"]
 zig = ["latest"]
 zls = ["latest"]
